remove image stretch issue

--- a/src/assets/css/react.css
+++ b/src/assets/css/react.css
@@ -73,7 +73,6 @@ html {
 }
 
 .media .media__image {
-  height: 360px !important;
   width: auto;
 }
 
